--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -163,6 +163,33 @@ fields['form_global'] = {
 };
 
 
+function exclude_image(el, pswp, image_id, exclude) {
+    var json_data = {
+        'CAMERA_ID'        : fields["CAMERA_ID"].input.val(),
+        'EXCLUDE_IMAGE_ID' : image_id,
+        'EXCLUDE_EXCLUDE'  : exclude,
+    };
+
+    $.ajax({
+        type: "POST",
+        url: "{{ url_for('indi_allsky.ajax_image_exclude_view') }}",
+        contentType: "application/json",
+        data: JSON.stringify(json_data),
+        success: function(rdata){
+            if (rdata['exclude']) {
+                pswp.currSlide.data.element.setAttribute("data-exclude", "true")
+                el.innerHTML = '<svg width="32" height="32" viewBox="0 0 32 32" aria-hidden="true" class="pswp__icn"><path d="M13.359 11.238C15.06 9.72 16 8 16 8s-3-5.5-8-5.5a7 7 0 0 0-2.79.588l.77.771A6 6 0 0 1 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755q-.247.248-.517.486z"/><path d="M11.297 9.176a3.5 3.5 0 0 0-4.474-4.474l.823.823a2.5 2.5 0 0 1 2.829 2.829zm-2.943 1.299.822.822a3.5 3.5 0 0 1-4.474-4.474l.823.823a2.5 2.5 0 0 0 2.829 2.829"/><path d="M3.35 5.47q-.27.24-.518.487A13 13 0 0 0 1.172 8l.195.288c.335.48.83 1.12 1.465 1.755C4.121 11.332 5.881 12.5 8 12.5c.716 0 1.39-.133 2.02-.36l.77.772A7 7 0 0 1 8 13.5C3 13.5 0 8 0 8s.939-1.721 2.641-3.238l.708.709zm10.296 8.884-12-12 .708-.708 12 12z"/></svg>';
+            } else {
+                pswp.currSlide.data.element.setAttribute("data-exclude", "false")
+                el.innerHTML = '<svg width="32" height="32" viewBox="0 0 32 32" aria-hidden="true" class="pswp__icn"><path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/><path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/></svg>';
+            }
+        },
+        error: function(rdata){
+        },
+    });
+}
+
+
 function populate_gallery(gallery_data) {
     if (lightbox) {
         lightbox.destroy();
@@ -180,6 +207,8 @@ function populate_gallery(gallery_data) {
             'target'      : "_blank",
             'rel'         : "noopener noreferrer",
             'class'       : "text-decoration-none",
+            'data-exclude' : item['exclude'],
+            'data-image_id' : item['id'],
         });
         a_tag.appendTo($('#allsky-gallery'));
 
@@ -229,7 +258,42 @@ function populate_gallery(gallery_data) {
               });
             }
         });
+
+        lightbox.pswp.ui.registerElement({
+            name: 'exclude-button',
+            order: 7,
+            isButton: true,
+            tagName: 'a',
+
+            onInit: (el, pswp) => {
+              pswp.on('change', () => {
+                console.log('Slide object data', pswp.currSlide.data);
+                if (pswp.currSlide.data.element.getAttribute("data-exclude") == "true") {
+                    el.innerHTML = '<svg width="32" height="32" viewBox="0 0 32 32" aria-hidden="true" class="pswp__icn"><path d="M13.359 11.238C15.06 9.72 16 8 16 8s-3-5.5-8-5.5a7 7 0 0 0-2.79.588l.77.771A6 6 0 0 1 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755q-.247.248-.517.486z"/><path d="M11.297 9.176a3.5 3.5 0 0 0-4.474-4.474l.823.823a2.5 2.5 0 0 1 2.829 2.829zm-2.943 1.299.822.822a3.5 3.5 0 0 1-4.474-4.474l.823.823a2.5 2.5 0 0 0 2.829 2.829"/><path d="M3.35 5.47q-.27.24-.518.487A13 13 0 0 0 1.172 8l.195.288c.335.48.83 1.12 1.465 1.755C4.121 11.332 5.881 12.5 8 12.5c.716 0 1.39-.133 2.02-.36l.77.772A7 7 0 0 1 8 13.5C3 13.5 0 8 0 8s.939-1.721 2.641-3.238l.708.709zm10.296 8.884-12-12 .708-.708 12 12z"/></svg>';
+                } else {
+                    el.innerHTML = '<svg width="32" height="32" viewBox="0 0 32 32" aria-hidden="true" class="pswp__icn"><path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/><path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/></svg>';
+                }
+              });
+            },
+
+            onClick: (event, el) => {
+                var image_id = pswp.currSlide.data.element.getAttribute("data-image_id");
+                var exclude = pswp.currSlide.data.element.getAttribute("data-exclude");
+
+                if (pswp.currSlide.data.element.getAttribute("data-exclude") == "true") {
+                    exclude_image(el, pswp, image_id, false);
+                } else {
+                    exclude_image(el, pswp, image_id, true);
+                }
+            }
+        });
     });
+
+    //lightbox.addFilter('uiElement', (el, data) => {
+    //  if (data.name === 'exclude-button') {
+    //  }
+    //  return el;
+    //});
 
     lightbox.init();
 }
